--- a/xadrez-console/xadrez-console.csproj
+++ b/xadrez-console/xadrez-console.csproj
@@ -49,6 +49,12 @@
     <Compile Include="tabuleiro\Posicao.cs" />
     <Compile Include="tabuleiro\Tabuleiro.cs" />
     <Compile Include="Tela.cs" />
+    <Compile Include="xadrez\Bispo.cs" />
+    <Compile Include="xadrez\Cavalo.cs" />
+    <Compile Include="xadrez\Dama.cs" />
+    <Compile Include="xadrez\Peao.cs" />
+    <Compile Include="xadrez\Rei.cs" />
+    <Compile Include="xadrez\Torre.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
